2005-07-30 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Build on Debian/PowerPC.

2005-05-26 Yen-Ju Chen <yjchenx at gmail _dot_ com>
	
	* Initial Import.